Added Ad Post form

--- a/config/storage.yml
+++ b/config/storage.yml
@@ -15,13 +15,13 @@ test:
   service: Disk
   root: <%= Rails.root.join("tmp/storage") %>
 
-amazon:
-  service: S3
-  access_key_id: ""
-  secret_access_key: ""
-  bucket: ""
-  region: "" # e.g. 'us-east-1'
-  public: true
+# amazon:
+#   service: S3
+#   access_key_id: ""
+#   secret_access_key: ""
+#   bucket: ""
+#   region: "us-east-1" # e.g. 'us-east-1'
+#   public: true
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
