--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "active_storage_drag_and_drop": "^0.4.1",
     "bootstrap": "^5.1.3",
-    "jquery": "3.6.0",
+    "dropzone": "^6.0.0-beta.1",
+    "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
